# MSPM03507-module-examples

./: .gitmodules  README.md
整理后的模块/20_board_bsp/2026_天猛星拓展板例程模板/: CMakeLists.txt  README.md  SCHEMATIC_PIN_MAP.md
整理后的模块/20_board_bsp/2026_天猛星拓展板例程模板/docs/: SAFETY_NOTES.md  SMOKE_TEST_PLAN.md  SYSCONFIG_ADAPTER_PORTING.md
整理后的模块/20_board_bsp/2026_天猛星拓展板例程模板/examples/: mspm0g3507_syscfg_adapter_example.c  smoke_test_main.c
整理后的模块/20_board_bsp/2026_天猛星拓展板例程模板/include/: tmx_expansion_board.h
整理后的模块/20_board_bsp/2026_天猛星拓展板例程模板/src/: tmx_expansion_board.c
整理后的模块/20_board_bsp/2026_天猛星拓展板例程模板/tests/: test_tmx_expansion_board_mock.c
整理后的模块/40_line_sensor/循迹模块可以套用的代码模板/: CMakeLists.txt  Makefile.mspm0g3507  README.md  SOURCE_ANALYSIS.md
整理后的模块/40_line_sensor/循迹模块可以套用的代码模板/docs/: BENCH_SENSOR_VERIFICATION.md  EVIDENCE_INDEX.md  HOT_TUNING_VERIFICATION.md  LOOP_SPEC.md  MSPM0_BUILD_AND_SWD.md  PERSISTENCE_STRATEGY.md  TUNING_SOP.md  VERIFICATION_MATRIX.md
整理后的模块/40_line_sensor/循迹模块可以套用的代码模板/examples/: integration_loop_example.c  mspm0g3507_adapter_example.c  mspm0g3507_smoke_main.c  profile_usage_example.c
整理后的模块/40_line_sensor/循迹模块可以套用的代码模板/include/: line_trace_template.h
整理后的模块/40_line_sensor/循迹模块可以套用的代码模板/linker/: mspm0g3507_smoke.ld
整理后的模块/40_line_sensor/循迹模块可以套用的代码模板/src/: line_trace_template.c
整理后的模块/40_line_sensor/循迹模块可以套用的代码模板/tests/: test_line_trace_mock.c
整理后的模块/40_line_sensor/循迹模块可以套用的代码模板/tools/: line_trace_bench_capture.py  line_trace_bench_validate.py  line_trace_hardware_gate_plan.py  line_trace_profile_freeze.py  line_trace_swd_readback.py  (+3 more)
(+1533 files in other folders)
